// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reporting APIs CSV Generation from Saved Search ID export from non-timebased data view with plain saved search csv file matches (7.17) 1`] = `
"_id,_index,_score,_type,eon,epoch,era,period
tvJJX4UBvD7uFsw9L2x4,timeless-test,1,_doc,Phanerozoic, Pliocene,Cenozoic,Neogene
t_JJX4UBvD7uFsw9L2x4,timeless-test,1,_doc,Phanerozoic, Holocene,Cenozoic,Quaternary
uPJJX4UBvD7uFsw9L2x4,timeless-test,1,_doc,Phanerozoic,-,Mesozoic,Cretaceous
ufJJX4UBvD7uFsw9L2x4,timeless-test,1,_doc,Phanerozoic,-,Mesozoic,Jurassic
uvJJX4UBvD7uFsw9L2x4,timeless-test,1,_doc,Phanerozoic,-,Paleozoic,Cambrian
u_JJX4UBvD7uFsw9L2x4,timeless-test,1,_doc,Proterozoic,-,Paleozoic,Permian
vPJJX4UBvD7uFsw9L2x4,timeless-test,1,_doc,Archean,-,-,-
vfJJX4UBvD7uFsw9L2x4,timeless-test,1,_doc,Hadean,-,-,-
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from non-timebased data view with plain saved search csv file matches (8) 1`] = `
"_id,_index,_score,_type,eon,epoch,era,period
tvJJX4UBvD7uFsw9L2x4,timeless-test,1,-,Phanerozoic, Pliocene,Cenozoic,Neogene
t_JJX4UBvD7uFsw9L2x4,timeless-test,1,-,Phanerozoic, Holocene,Cenozoic,Quaternary
uPJJX4UBvD7uFsw9L2x4,timeless-test,1,-,Phanerozoic,-,Mesozoic,Cretaceous
ufJJX4UBvD7uFsw9L2x4,timeless-test,1,-,Phanerozoic,-,Mesozoic,Jurassic
uvJJX4UBvD7uFsw9L2x4,timeless-test,1,-,Phanerozoic,-,Paleozoic,Cambrian
u_JJX4UBvD7uFsw9L2x4,timeless-test,1,-,Proterozoic,-,Paleozoic,Permian
vPJJX4UBvD7uFsw9L2x4,timeless-test,1,-,Archean,-,-,-
vfJJX4UBvD7uFsw9L2x4,timeless-test,1,-,Hadean,-,-,-
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with "doc_table:hideTimeColumn" = "On" csv file matches 1`] = `
"clientip,extension
238.171.34.42,jpg
155.34.86.215,jpg
231.224.4.183,jpg
17.191.87.129,jpg
239.190.189.77,jpg
237.192.52.3,css
15.202.168.250,jpg
103.57.26.210,jpg
97.83.96.39,jpg
98.89.73.11,jpg
129.18.83.242,gif
53.64.147.41,png
47.141.35.68,css
57.237.11.219,png
51.147.43.175,jpg
42.72.83.65,jpg
0.209.80.244,jpg
87.66.62.130,jpg
236.90.86.83,jpg
44.138.70.255,jpg
159.230.143.48,jpg
51.105.100.214,jpg
16.148.135.166,jpg
220.101.221.163,css
226.167.54.119,css
27.137.8.156,css
226.40.103.254,jpg
228.177.73.18,jpg
7.179.148.96,css
245.69.63.219,png
216.115.81.216,jpg
97.233.183.250,jpg
74.214.76.90,jpg
77.227.154.93,jpg
142.202.198.155,png
238.210.116.210,jpg
45.138.192.138,jpg
206.136.156.225,jpg
180.65.205.98,png
62.132.195.31,jpg
27.127.76.132,jpg
68.107.5.226,jpg
201.154.233.154,jpg
28.3.30.170,jpg
240.3.115.126,jpg
108.46.176.132,jpg
189.34.180.209,jpg
74.224.77.232,gif
121.98.248.112,jpg
194.223.214.184,jpg
135.233.238.181,jpg
169.137.241.169,png
201.154.233.154,png
239.180.70.74,jpg
55.57.7.61,css
222.224.95.15,jpg
13.38.168.2,jpg
111.12.231.216,jpg
230.249.93.77,jpg
252.185.146.124,css
252.59.37.77,jpg
102.19.248.156,php
179.115.77.46,png
239.143.176.28,gif
0.228.1.71,png
71.241.97.89,png
194.232.128.91,png
229.53.125.87,jpg
213.152.13.69,jpg
63.142.94.147,png
84.205.43.205,jpg
216.126.255.31,jpg
158.222.162.158,jpg
194.30.157.224,jpg
150.7.164.59,jpg
248.239.221.43,jpg
89.53.114.44,gif
17.117.135.38,jpg
223.237.148.2,jpg
157.136.137.24,css
174.196.54.80,png
30.36.151.195,jpg
27.127.76.132,jpg
219.136.31.156,png
120.99.203.64,png
194.4.152.176,png
93.12.132.188,css
173.237.216.175,jpg
217.132.169.207,png
241.45.143.98,php
152.43.63.180,css
142.76.208.132,jpg
31.196.214.182,jpg
174.32.230.63,jpg
16.236.101.225,jpg
72.173.69.119,jpg
78.151.142.25,jpg
213.208.15.12,css
30.92.50.149,css
244.112.251.87,jpg
135.233.238.181,gif
238.153.51.78,jpg
111.12.231.216,jpg
9.59.191.54,css
251.207.101.203,jpg
191.83.76.140,png
62.51.178.50,jpg
39.250.210.253,jpg
167.26.56.145,css
194.4.152.176,jpg
144.31.154.6,jpg
21.123.27.0,png
18.113.253.141,jpg
106.217.103.105,css
153.250.60.205,jpg
111.218.253.140,jpg
102.19.248.156,css
197.150.233.60,css
26.225.101.206,jpg
250.208.48.188,css
79.76.124.169,gif
175.99.184.146,jpg
97.147.119.226,png
220.101.221.163,jpg
36.160.226.203,jpg
171.243.18.67,css
185.148.221.121,jpg
12.255.88.79,jpg
90.0.214.93,css
80.83.92.252,jpg
128.169.152.213,jpg
221.228.246.126,png
224.240.85.118,jpg
233.126.159.144,jpg
165.104.70.8,jpg
11.195.111.241,jpg
125.20.91.73,jpg
23.178.170.24,png
28.46.60.20,png
116.171.234.62,jpg
172.218.31.116,jpg
94.154.194.208,jpg
20.34.86.255,jpg
92.96.51.231,jpg
115.225.12.164,jpg
71.169.104.184,css
130.246.231.47,css
44.138.70.255,css
153.250.60.205,jpg
163.123.136.118,png
39.255.142.177,gif
94.48.29.38,css
252.210.163.45,css
53.201.212.220,jpg
25.39.140.144,jpg
90.35.159.150,css
159.136.76.65,gif
68.189.205.188,jpg
220.101.221.163,css
83.236.80.152,css
128.248.96.80,css
234.58.25.145,jpg
81.186.187.11,jpg
162.134.126.82,jpg
142.17.191.204,jpg
137.247.158.26,jpg
156.231.132.106,jpg
22.7.121.157,css
176.7.244.68,jpg
78.233.202.162,jpg
99.16.191.123,jpg
28.46.60.20,jpg
169.137.241.169,jpg
48.242.153.99,css
15.202.168.250,jpg
185.170.80.142,jpg
53.24.249.29,css
215.182.13.142,jpg
120.101.20.104,jpg
51.147.43.175,jpg
62.51.178.50,gif
250.30.209.2,jpg
111.214.104.239,php
112.34.138.226,jpg
185.144.182.162,css
233.126.159.144,css
180.37.241.184,jpg
165.24.164.93,jpg
192.158.203.248,css
184.101.186.240,jpg
93.63.63.137,jpg
126.87.234.213,jpg
111.218.253.140,jpg
155.157.127.149,jpg
54.172.121.192,jpg
88.33.120.224,png
9.69.255.135,jpg
191.77.18.142,css
200.188.1.153,png
57.119.62.60,jpg
103.108.133.125,jpg
98.116.179.248,jpg
16.148.135.166,jpg
18.106.209.231,css
142.202.198.155,jpg
55.119.119.38,jpg
192.158.203.248,png
170.200.84.215,png
108.183.234.114,css
128.108.188.178,jpg
21.123.27.0,gif
213.165.226.140,jpg
147.244.160.168,jpg
1.59.159.138,jpg
158.179.121.61,php
49.95.6.196,gif
140.233.207.177,jpg
55.100.60.111,css
225.42.74.240,jpg
123.85.77.216,png
216.126.255.31,php
63.212.173.15,jpg
240.207.64.202,php
235.115.221.35,jpg
222.224.95.15,jpg
99.74.96.103,jpg
181.135.248.113,jpg
134.47.243.34,css
33.244.83.137,gif
182.186.221.142,jpg
124.187.220.168,jpg
97.83.96.39,jpg
150.7.164.59,jpg
17.123.55.136,jpg
172.218.31.116,jpg
0.53.251.53,jpg
123.35.55.46,css
54.194.215.29,png
25.156.46.205,jpg
167.165.89.8,jpg
17.58.22.109,jpg
160.151.244.234,png
250.44.130.70,jpg
160.244.231.5,jpg
252.107.74.6,jpg
51.70.170.56,jpg
43.123.164.190,jpg
57.79.108.136,jpg
9.112.81.106,png
21.224.184.36,jpg
92.153.81.10,gif
91.217.157.152,jpg
11.195.111.241,jpg
106.142.212.24,jpg
144.135.123.19,css
162.218.161.231,css
200.227.142.190,gif
119.201.32.254,css
203.118.132.112,css
53.55.251.105,jpg
147.195.26.33,jpg
194.109.145.217,jpg
238.237.64.228,css
41.210.252.157,jpg
159.137.252.66,jpg
21.111.249.239,png
238.237.64.228,png
176.253.222.16,jpg
196.97.127.109,jpg
91.10.173.138,jpg
232.144.75.220,css
197.49.80.127,jpg
62.97.175.115,jpg
115.225.12.164,jpg
251.84.111.185,css
114.113.219.30,png
130.171.208.139,jpg
69.87.49.40,gif
252.199.194.23,jpg
188.123.71.54,jpg
69.142.235.222,jpg
160.243.109.222,jpg
82.40.137.38,jpg
54.172.121.192,png
78.233.202.162,jpg
12.200.161.41,jpg
135.90.39.228,jpg
101.130.216.47,gif
95.128.176.48,jpg
235.190.3.193,png
240.55.195.184,css
32.94.46.226,jpg
199.113.69.162,jpg
127.63.221.223,css
156.231.132.106,jpg
240.87.17.249,jpg
187.33.177.173,jpg
177.194.175.66,jpg
126.112.222.13,jpg
126.191.39.198,jpg
197.49.80.127,jpg
142.202.198.155,jpg
254.75.96.91,gif
229.219.133.141,jpg
135.233.238.181,jpg
153.49.130.46,jpg
60.71.214.79,jpg
137.247.158.26,png
110.148.228.141,jpg
25.140.171.133,php
216.242.201.206,jpg
232.206.227.106,jpg
201.154.233.154,jpg
99.216.169.176,gif
44.116.186.0,css
216.126.255.31,css
69.87.49.40,jpg
201.255.221.0,jpg
221.181.166.105,jpg
239.190.189.77,jpg
227.43.145.144,css
172.96.96.191,css
151.97.64.146,jpg
3.6.163.4,jpg
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with no saved filters and job post params csv file matches 1`] = `
"@timestamp,clientip,extension
2015-09-20 10:25:44.979,175.188.44.145,css
2015-09-20 10:25:40.968,89.143.125.181,jpg
2015-09-20 10:25:36.331,231.169.195.137,css
2015-09-20 10:25:34.064,137.205.146.206,jpg
2015-09-20 10:25:32.312,53.0.188.251,jpg
2015-09-20 10:25:27.254,111.214.104.239,jpg
2015-09-20 10:25:22.561,111.46.85.146,jpg
2015-09-20 10:25:06.674,55.100.60.111,jpg
2015-09-20 10:25:05.114,34.197.178.155,jpg
2015-09-20 10:24:55.114,163.123.136.118,jpg
2015-09-20 10:24:54.818,11.195.163.57,jpg
2015-09-20 10:24:53.742,96.222.137.213,png
2015-09-20 10:24:48.798,227.228.214.218,jpg
2015-09-20 10:24:20.223,228.53.110.116,jpg
2015-09-20 10:24:01.794,196.131.253.111,png
2015-09-20 10:23:49.521,125.163.133.47,jpg
2015-09-20 10:23:45.816,148.47.216.255,jpg
2015-09-20 10:23:36.052,51.105.100.214,jpg
2015-09-20 10:23:34.323,41.210.252.157,gif
2015-09-20 10:23:27.213,248.163.75.193,png
2015-09-20 10:23:14.866,48.43.210.167,png
2015-09-20 10:23:10.578,33.95.78.209,css
2015-09-20 10:23:07.001,96.40.73.208,css
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with no saved filters and job post params with custom time zone csv file matches 1`] = `
"order_date,category,currency,customer_id,order_id,day_of_week_i,products.created_on,sku
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing, Women's Accessories, Men's Accessories,EUR,19,716724,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0687606876, ZO0290502905, ZO0126701267, ZO0308503085
2019-07-11 16:00:00.000,Women's Shoes, Women's Clothing,EUR,45,591503,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0006400064, ZO0150601506
2019-07-11 16:00:00.000,Women's Clothing,EUR,12,591709,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0638206382, ZO0038800388
2019-07-11 16:00:00.000,Men's Clothing,EUR,52,590937,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0297602976, ZO0565605656
2019-07-11 16:00:00.000,Men's Clothing,EUR,29,590976,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0561405614, ZO0281602816
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,41,591636,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0385003850, ZO0408604086
2019-07-11 16:00:00.000,Men's Shoes,EUR,30,591539,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0505605056, ZO0513605136
2019-07-11 16:00:00.000,Men's Clothing,EUR,41,591598,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0276702767, ZO0291702917
2019-07-11 16:00:00.000,Women's Clothing,EUR,44,590927,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0046600466, ZO0050800508
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,48,590970,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0455604556, ZO0680806808
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,46,591299,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0229002290, ZO0674406744
2019-07-11 16:00:00.000,Men's Clothing,EUR,36,591133,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0529905299, ZO0617006170
2019-07-11 16:00:00.000,Men's Clothing,EUR,13,591175,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0299402994, ZO0433504335
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,21,591297,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0257502575, ZO0451704517
2019-07-11 16:00:00.000,Men's Clothing,EUR,14,591149,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0584905849, ZO0578405784
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,27,591754,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0335803358, ZO0325903259
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,42,591803,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0645906459, ZO0324303243
2019-07-11 16:00:00.000,Women's Clothing,EUR,46,592082,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0034400344, ZO0492904929
2019-07-11 16:00:00.000,Women's Shoes, Women's Accessories,EUR,27,591283,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0239302393, ZO0198501985
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,4,591148,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0290302903, ZO0513705137
2019-07-11 16:00:00.000,Men's Accessories, Men's Clothing,EUR,51,591417,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0464504645, ZO0621006210
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,14,591562,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0544305443, ZO0108001080
2019-07-11 16:00:00.000,Women's Clothing, Women's Accessories,EUR,5,590996,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0638106381, ZO0096900969
2019-07-11 16:00:00.000,Women's Shoes,EUR,27,591317,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0366203662, ZO0139501395
2019-07-11 16:00:00.000,Men's Clothing,EUR,38,591362,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0541805418, ZO0594105941
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,30,591411,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0693506935, ZO0532405324
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,38,722629,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0424204242, ZO0403504035, ZO0506705067, ZO0395603956
2019-07-11 16:00:00.000,Men's Clothing,EUR,16,591041,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0418704187, ZO0557105571
2019-07-11 16:00:00.000,Women's Clothing,EUR,6,591074,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0268602686, ZO0484704847
2019-07-11 16:00:00.000,Men's Clothing,EUR,7,591349,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0474804748, ZO0560705607
2019-07-11 16:00:00.000,Women's Accessories, Women's Clothing,EUR,44,591374,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0206002060, ZO0268302683
2019-07-11 16:00:00.000,Women's Clothing,EUR,12,591230,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0226902269, ZO0660106601
2019-07-11 16:00:00.000,Women's Shoes, Women's Clothing,EUR,17,591717,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0248002480, ZO0646706467
2019-07-11 16:00:00.000,Women's Shoes,EUR,42,591768,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0005800058, ZO0133901339
2019-07-11 16:00:00.000,Men's Clothing,EUR,21,591810,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0587405874, ZO0590305903
2019-07-11 16:00:00.000,Women's Accessories, Women's Shoes,EUR,22,592049,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0186201862, ZO0018800188
2019-07-11 16:00:00.000,Women's Clothing, Women's Accessories,EUR,28,592097,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0265502655, ZO0201102011
2019-07-11 16:00:00.000,Men's Clothing,EUR,19,590807,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0582105821, ZO0421304213
2019-07-11 16:00:00.000,Men's Accessories, Men's Clothing,EUR,13,714827,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0314503145, ZO0444804448, ZO0538405384, ZO0630306303
2019-07-11 16:00:00.000,Women's Shoes,EUR,22,591735,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0248402484, ZO0382603826
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with no saved filters and no job post params csv file matches 1`] = `
"@timestamp,clientip,extension
2015-09-22 23:50:13.253,238.171.34.42,jpg
2015-09-22 23:43:58.175,155.34.86.215,jpg
2015-09-22 23:24:14.970,231.224.4.183,jpg
2015-09-22 23:21:38.312,17.191.87.129,jpg
2015-09-22 22:52:43.834,239.190.189.77,jpg
2015-09-22 22:47:07.981,237.192.52.3,css
2015-09-22 22:46:45.525,15.202.168.250,jpg
2015-09-22 22:29:42.029,103.57.26.210,jpg
2015-09-22 22:23:07.177,97.83.96.39,jpg
2015-09-22 22:20:48.857,98.89.73.11,jpg
2015-09-22 22:11:17.488,129.18.83.242,gif
2015-09-22 22:09:30.819,53.64.147.41,png
2015-09-22 22:01:11.244,47.141.35.68,css
2015-09-22 21:49:36.365,57.237.11.219,png
2015-09-22 21:48:33.421,51.147.43.175,jpg
2015-09-22 21:48:11.977,42.72.83.65,jpg
2015-09-22 21:47:34.138,0.209.80.244,jpg
2015-09-22 21:46:01.933,87.66.62.130,jpg
2015-09-22 21:45:59.966,236.90.86.83,jpg
2015-09-22 21:44:49.105,44.138.70.255,jpg
2015-09-22 21:40:33.574,159.230.143.48,jpg
2015-09-22 21:32:58.944,51.105.100.214,jpg
2015-09-22 21:29:40.042,16.148.135.166,jpg
2015-09-22 21:29:37.272,220.101.221.163,css
2015-09-22 21:20:08.993,226.167.54.119,css
2015-09-22 21:07:30.556,27.137.8.156,css
2015-09-22 21:05:31.686,226.40.103.254,jpg
2015-09-22 21:03:46.267,228.177.73.18,jpg
2015-09-22 21:01:53.470,7.179.148.96,css
2015-09-22 20:59:43.107,245.69.63.219,png
2015-09-22 20:58:28.117,216.115.81.216,jpg
2015-09-22 20:57:31.322,97.233.183.250,jpg
2015-09-22 20:54:33.581,74.214.76.90,jpg
2015-09-22 20:53:49.505,77.227.154.93,jpg
2015-09-22 20:50:20.692,142.202.198.155,png
2015-09-22 20:44:08.950,238.210.116.210,jpg
2015-09-22 20:44:05.521,45.138.192.138,jpg
2015-09-22 20:42:36.070,206.136.156.225,jpg
2015-09-22 20:41:53.463,180.65.205.98,png
2015-09-22 20:41:29.385,62.132.195.31,jpg
2015-09-22 20:40:22.952,27.127.76.132,jpg
2015-09-22 20:39:06.213,68.107.5.226,jpg
2015-09-22 20:38:10.646,201.154.233.154,jpg
2015-09-22 20:37:09.278,28.3.30.170,jpg
2015-09-22 20:35:47.356,240.3.115.126,jpg
2015-09-22 20:33:27.729,108.46.176.132,jpg
2015-09-22 20:32:42.845,189.34.180.209,jpg
2015-09-22 20:30:35.890,74.224.77.232,gif
2015-09-22 20:28:19.188,121.98.248.112,jpg
2015-09-22 20:27:47.226,194.223.214.184,jpg
2015-09-22 20:26:31.997,135.233.238.181,jpg
2015-09-22 20:24:19.796,169.137.241.169,png
2015-09-22 20:22:37.423,201.154.233.154,png
2015-09-22 20:21:39.120,239.180.70.74,jpg
2015-09-22 20:19:46.978,55.57.7.61,css
2015-09-22 20:19:04.659,222.224.95.15,jpg
2015-09-22 20:18:51.536,13.38.168.2,jpg
2015-09-22 20:17:31.329,111.12.231.216,jpg
2015-09-22 20:17:23.395,230.249.93.77,jpg
2015-09-22 20:16:00.611,252.185.146.124,css
2015-09-22 20:15:41.764,252.59.37.77,jpg
2015-09-22 20:15:12.828,102.19.248.156,php
2015-09-22 20:14:57.857,179.115.77.46,png
2015-09-22 20:14:54.351,239.143.176.28,gif
2015-09-22 20:13:42.223,0.228.1.71,png
2015-09-22 20:11:39.532,71.241.97.89,png
2015-09-22 20:10:17.108,194.232.128.91,png
2015-09-22 20:10:06.354,229.53.125.87,jpg
2015-09-22 20:08:38.340,213.152.13.69,jpg
2015-09-22 20:07:46.684,63.142.94.147,png
2015-09-22 20:06:41.893,84.205.43.205,jpg
2015-09-22 20:05:41.053,216.126.255.31,jpg
2015-09-22 20:04:22.445,158.222.162.158,jpg
2015-09-22 20:01:46.685,194.30.157.224,jpg
2015-09-22 20:01:25.828,150.7.164.59,jpg
2015-09-22 20:01:09.463,248.239.221.43,jpg
2015-09-22 20:00:22.799,89.53.114.44,gif
2015-09-22 20:00:04.343,17.117.135.38,jpg
2015-09-22 19:59:59.444,223.237.148.2,jpg
2015-09-22 19:58:35.928,157.136.137.24,css
2015-09-22 19:58:17.100,174.196.54.80,png
2015-09-22 19:55:14.208,30.36.151.195,jpg
2015-09-22 19:53:19.530,27.127.76.132,jpg
2015-09-22 19:48:47.191,219.136.31.156,png
2015-09-22 19:48:27.795,120.99.203.64,png
2015-09-22 19:47:24.192,194.4.152.176,png
2015-09-22 19:46:46.305,93.12.132.188,css
2015-09-22 19:45:58.147,173.237.216.175,jpg
2015-09-22 19:45:32.188,217.132.169.207,png
2015-09-22 19:45:13.813,241.45.143.98,php
2015-09-22 19:43:38.182,152.43.63.180,css
2015-09-22 19:42:23.637,142.76.208.132,jpg
2015-09-22 19:42:20.232,31.196.214.182,jpg
2015-09-22 19:42:12.006,174.32.230.63,jpg
2015-09-22 19:40:17.903,16.236.101.225,jpg
2015-09-22 19:39:51.648,72.173.69.119,jpg
2015-09-22 19:39:30.216,78.151.142.25,jpg
2015-09-22 19:39:19.150,213.208.15.12,css
2015-09-22 19:39:05.190,30.92.50.149,css
2015-09-22 19:38:03.689,244.112.251.87,jpg
2015-09-22 19:38:00.511,135.233.238.181,gif
2015-09-22 19:37:58.973,238.153.51.78,jpg
2015-09-22 19:37:50.552,111.12.231.216,jpg
2015-09-22 19:37:41.141,9.59.191.54,css
2015-09-22 19:37:19.681,251.207.101.203,jpg
2015-09-22 19:36:07.805,191.83.76.140,png
2015-09-22 19:35:58.444,62.51.178.50,jpg
2015-09-22 19:34:38.837,39.250.210.253,jpg
2015-09-22 19:33:16.735,167.26.56.145,css
2015-09-22 19:32:50.098,194.4.152.176,jpg
2015-09-22 19:32:23.731,144.31.154.6,jpg
2015-09-22 19:32:12.796,21.123.27.0,png
2015-09-22 19:32:12.353,18.113.253.141,jpg
2015-09-22 19:32:12.321,106.217.103.105,css
2015-09-22 19:31:49.907,153.250.60.205,jpg
2015-09-22 19:29:51.510,111.218.253.140,jpg
2015-09-22 19:29:47.418,102.19.248.156,css
2015-09-22 19:29:34.542,197.150.233.60,css
2015-09-22 19:29:14.959,26.225.101.206,jpg
2015-09-22 19:28:21.352,250.208.48.188,css
2015-09-22 19:25:02.834,79.76.124.169,gif
2015-09-22 19:24:19.169,175.99.184.146,jpg
2015-09-22 19:06:06.687,97.147.119.226,png
2015-09-22 19:05:23.413,220.101.221.163,jpg
2015-09-22 19:04:00.289,36.160.226.203,jpg
2015-09-22 19:03:44.822,171.243.18.67,css
2015-09-22 19:02:50.703,185.148.221.121,jpg
2015-09-22 19:02:46.169,12.255.88.79,jpg
2015-09-22 19:02:26.558,90.0.214.93,css
2015-09-22 19:01:35.168,80.83.92.252,jpg
2015-09-22 19:00:50.612,128.169.152.213,jpg
2015-09-22 18:59:46.757,221.228.246.126,png
2015-09-22 18:59:42.673,224.240.85.118,jpg
2015-09-22 18:59:21.938,233.126.159.144,jpg
2015-09-22 18:59:03.604,165.104.70.8,jpg
2015-09-22 18:59:00.085,11.195.111.241,jpg
2015-09-22 18:58:57.002,125.20.91.73,jpg
2015-09-22 18:58:45.453,23.178.170.24,png
2015-09-22 18:57:51.377,28.46.60.20,png
2015-09-22 18:56:55.069,116.171.234.62,jpg
2015-09-22 18:56:41.217,172.218.31.116,jpg
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with no selected columns and saved date filter and no job post params csv file matches (7.17) 1`] = `
"@message,@message.raw,@tags,@tags.raw,@timestamp,_id,_index,_score,_type,agent,agent.raw,bytes,clientip,extension,extension.raw,geo.coordinates,geo.dest,geo.src,geo.srcdest,headings,headings.raw,host,host.raw,index,index.raw,ip,links,links.raw,machine.os,machine.os.raw,machine.ram,machine.ram_range,referer,relatedContent.article:modified_time,relatedContent.article:published_time,relatedContent.article:section,relatedContent.article:section.raw,relatedContent.article:tag,relatedContent.article:tag.raw,relatedContent.og:description,relatedContent.og:description.raw,relatedContent.og:image,relatedContent.og:image.raw,relatedContent.og:image:height,relatedContent.og:image:height.raw,relatedContent.og:image:width,relatedContent.og:image:width.raw,relatedContent.og:site_name,relatedContent.og:site_name.raw,relatedContent.og:title,relatedContent.og:title.raw,relatedContent.og:type,relatedContent.og:type.raw,relatedContent.og:url,relatedContent.og:url.raw,relatedContent.twitter:card,relatedContent.twitter:card.raw,relatedContent.twitter:description,relatedContent.twitter:description.raw,relatedContent.twitter:image,relatedContent.twitter:image.raw,relatedContent.twitter:site,relatedContent.twitter:site.raw,relatedContent.twitter:title,relatedContent.twitter:title.raw,relatedContent.url,relatedContent.url.raw,request,request.raw,response,response.raw,spaces,spaces.raw,type,url,url.raw,utc_time,xss,xss.raw
149.170.135.63 - - [2015-09-21T04:32:47.536Z] \\"GET /uploads/vance-brand.jpg HTTP/1.1\\" 200 9723 \\"-\\" \\"Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1\\",149.170.135.63 - - [2015-09-21T04:32:47.536Z] \\"GET /uploads/vance-brand.jpg HTTP/1.1\\" 200 9723 \\"-\\" \\"Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1\\",success, info,success, info,2015-09-21 04:32:47.536,AU_x3_g3GFA8no6QjkHp,logstash-2015.09.21,-,_doc,Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1,Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1,9,723,149.170.135.63,jpg,jpg,{
  \\"coordinates\\": [
    -93.61685667,
    36.38340333
  ],
  \\"type\\": \\"Point\\"
},CN,CN,CN:CN,<h3>george-nelson</h5>, http://twitter.com/success/michael-fincke,<h3>george-nelson</h5>, http://twitter.com/success/michael-fincke,media-for-the-masses.theacademyofperformingartsandscience.org,media-for-the-masses.theacademyofperformingartsandscience.org,logstash-2015.09.21,logstash-2015.09.21,149.170.135.63,tamara-e-jernigan@twitter.com, http://twitter.com/info/daniel-barry, www.www.slate.com,tamara-e-jernigan@twitter.com, http://twitter.com/info/daniel-barry, www.www.slate.com,win 7,win 7,15,032,385,536,{
  \\"lt\\": 15032385599,
  \\"gte\\": 15032385536
},http://www.slate.com/warning/kevin-kregel,2015-01-31 23:20:16.000,2008-02-14 16:03:19.000,Music,Music,-,-,Willie Nelson, Nokia Theatre, Feb. 13 Photos by Timothy Norris If Willie Nelson had delivered a show with half as much heart, enthusiasm and class, it s...,Willie Nelson, Nokia Theatre, Feb. 13 Photos by Timothy Norris If Willie Nelson had delivered a show with half as much heart, enthusiasm and class, it s...,http://IMAGES1.laweekly.com/imager/willie-nelson-nokia-2-13/u/original/2466986/willienelsontn018.jpg,http://IMAGES1.laweekly.com/imager/willie-nelson-nokia-2-13/u/original/2466986/willienelsontn018.jpg,723,723,480,480,LA Weekly,LA Weekly,Willie Nelson, Nokia, 2/13,Willie Nelson, Nokia, 2/13,article,article,http://www.laweekly.com/music/willie-nelson-nokia-2-13-2404749,http://www.laweekly.com/music/willie-nelson-nokia-2-13-2404749,summary,summary,Willie Nelson, Nokia Theatre, Feb. 13 Photos by Timothy Norris If Willie Nelson had delivered a show with half as much heart, enthusiasm and class, it s...,Willie Nelson, Nokia Theatre, Feb. 13 Photos by Timothy Norris If Willie Nelson had delivered a show with half as much heart, enthusiasm and class, it s...,http://IMAGES1.laweekly.com/imager/willie-nelson-nokia-2-13/u/original/2466986/willienelsontn018.jpg,http://IMAGES1.laweekly.com/imager/willie-nelson-nokia-2-13/u/original/2466986/willienelsontn018.jpg,@laweekly,@laweekly,Willie Nelson, Nokia, 2/13,Willie Nelson, Nokia, 2/13,http://www.laweekly.com/music/willie-nelson-nokia-2-13-2404749,http://www.laweekly.com/music/willie-nelson-nokia-2-13-2404749,/uploads/vance-brand.jpg,/uploads/vance-brand.jpg,200,200,this   is   a   thing    with lots of     spaces       wwwwoooooo,this   is   a   thing    with lots of     spaces       wwwwoooooo,apache,https://media-for-the-masses.theacademyofperformingartsandscience.org/uploads/vance-brand.jpg,https://media-for-the-masses.theacademyofperformingartsandscience.org/uploads/vance-brand.jpg,2015-09-21 04:32:47.536,<script>console.log(\\"xss\\")</script>,<script>console.log(\\"xss\\")</script>
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with no selected columns and saved date filter and no job post params csv file matches (8) 1`] = `
"@message,@message.raw,@tags,@tags.raw,@timestamp,_id,_index,_score,_type,agent,agent.raw,bytes,clientip,extension,extension.raw,geo.coordinates,geo.dest,geo.src,geo.srcdest,headings,headings.raw,host,host.raw,index,index.raw,ip,links,links.raw,machine.os,machine.os.raw,machine.ram,machine.ram_range,referer,relatedContent.article:modified_time,relatedContent.article:published_time,relatedContent.article:section,relatedContent.article:section.raw,relatedContent.article:tag,relatedContent.article:tag.raw,relatedContent.og:description,relatedContent.og:description.raw,relatedContent.og:image,relatedContent.og:image.raw,relatedContent.og:image:height,relatedContent.og:image:height.raw,relatedContent.og:image:width,relatedContent.og:image:width.raw,relatedContent.og:site_name,relatedContent.og:site_name.raw,relatedContent.og:title,relatedContent.og:title.raw,relatedContent.og:type,relatedContent.og:type.raw,relatedContent.og:url,relatedContent.og:url.raw,relatedContent.twitter:card,relatedContent.twitter:card.raw,relatedContent.twitter:description,relatedContent.twitter:description.raw,relatedContent.twitter:image,relatedContent.twitter:image.raw,relatedContent.twitter:site,relatedContent.twitter:site.raw,relatedContent.twitter:title,relatedContent.twitter:title.raw,relatedContent.url,relatedContent.url.raw,request,request.raw,response,response.raw,spaces,spaces.raw,type,url,url.raw,utc_time,xss,xss.raw
149.170.135.63 - - [2015-09-21T04:32:47.536Z] \\"GET /uploads/vance-brand.jpg HTTP/1.1\\" 200 9723 \\"-\\" \\"Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1\\",149.170.135.63 - - [2015-09-21T04:32:47.536Z] \\"GET /uploads/vance-brand.jpg HTTP/1.1\\" 200 9723 \\"-\\" \\"Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1\\",success, info,success, info,2015-09-21 04:32:47.536,AU_x3_g3GFA8no6QjkHp,logstash-2015.09.21,-,-,Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1,Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1,9,723,149.170.135.63,jpg,jpg,{
  \\"coordinates\\": [
    -93.61685667,
    36.38340333
  ],
  \\"type\\": \\"Point\\"
},CN,CN,CN:CN,<h3>george-nelson</h5>, http://twitter.com/success/michael-fincke,<h3>george-nelson</h5>, http://twitter.com/success/michael-fincke,media-for-the-masses.theacademyofperformingartsandscience.org,media-for-the-masses.theacademyofperformingartsandscience.org,logstash-2015.09.21,logstash-2015.09.21,149.170.135.63,tamara-e-jernigan@twitter.com, http://twitter.com/info/daniel-barry, www.www.slate.com,tamara-e-jernigan@twitter.com, http://twitter.com/info/daniel-barry, www.www.slate.com,win 7,win 7,15,032,385,536,{
  \\"lt\\": 15032385599,
  \\"gte\\": 15032385536
},http://www.slate.com/warning/kevin-kregel,2015-01-31 23:20:16.000,2008-02-14 16:03:19.000,Music,Music,-,-,Willie Nelson, Nokia Theatre, Feb. 13 Photos by Timothy Norris If Willie Nelson had delivered a show with half as much heart, enthusiasm and class, it s...,Willie Nelson, Nokia Theatre, Feb. 13 Photos by Timothy Norris If Willie Nelson had delivered a show with half as much heart, enthusiasm and class, it s...,http://IMAGES1.laweekly.com/imager/willie-nelson-nokia-2-13/u/original/2466986/willienelsontn018.jpg,http://IMAGES1.laweekly.com/imager/willie-nelson-nokia-2-13/u/original/2466986/willienelsontn018.jpg,723,723,480,480,LA Weekly,LA Weekly,Willie Nelson, Nokia, 2/13,Willie Nelson, Nokia, 2/13,article,article,http://www.laweekly.com/music/willie-nelson-nokia-2-13-2404749,http://www.laweekly.com/music/willie-nelson-nokia-2-13-2404749,summary,summary,Willie Nelson, Nokia Theatre, Feb. 13 Photos by Timothy Norris If Willie Nelson had delivered a show with half as much heart, enthusiasm and class, it s...,Willie Nelson, Nokia Theatre, Feb. 13 Photos by Timothy Norris If Willie Nelson had delivered a show with half as much heart, enthusiasm and class, it s...,http://IMAGES1.laweekly.com/imager/willie-nelson-nokia-2-13/u/original/2466986/willienelsontn018.jpg,http://IMAGES1.laweekly.com/imager/willie-nelson-nokia-2-13/u/original/2466986/willienelsontn018.jpg,@laweekly,@laweekly,Willie Nelson, Nokia, 2/13,Willie Nelson, Nokia, 2/13,http://www.laweekly.com/music/willie-nelson-nokia-2-13-2404749,http://www.laweekly.com/music/willie-nelson-nokia-2-13-2404749,/uploads/vance-brand.jpg,/uploads/vance-brand.jpg,200,200,this   is   a   thing    with lots of     spaces       wwwwoooooo,this   is   a   thing    with lots of     spaces       wwwwoooooo,apache,https://media-for-the-masses.theacademyofperformingartsandscience.org/uploads/vance-brand.jpg,https://media-for-the-masses.theacademyofperformingartsandscience.org/uploads/vance-brand.jpg,2015-09-21 04:32:47.536,<script>console.log(\\"xss\\")</script>,<script>console.log(\\"xss\\")</script>
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with saved date and terms filters and no job post params csv file matches 1`] = `
"@timestamp,clientip,extension
2015-09-20 10:23:34.323,41.210.252.157,gif
2015-09-20 10:22:36.107,232.64.207.109,gif
2015-09-20 10:19:43.754,171.243.18.67,gif
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with saved date filter and no job post params csv file matches 1`] = `
"@timestamp,clientip,extension
2015-09-20 10:26:48.725,74.214.76.90,jpg
2015-09-20 10:26:48.540,146.86.123.109,jpg
2015-09-20 10:26:48.353,233.126.159.144,jpg
2015-09-20 10:26:45.468,153.139.156.196,png
2015-09-20 10:26:34.063,25.140.171.133,css
2015-09-20 10:26:11.181,239.249.202.59,jpg
2015-09-20 10:26:00.639,95.59.225.31,css
2015-09-20 10:26:00.094,247.174.57.245,jpg
2015-09-20 10:25:55.744,116.126.47.226,css
2015-09-20 10:25:54.701,169.228.188.120,jpg
2015-09-20 10:25:52.360,74.224.77.232,css
2015-09-20 10:25:49.913,97.83.96.39,css
2015-09-20 10:25:44.979,175.188.44.145,css
2015-09-20 10:25:40.968,89.143.125.181,jpg
2015-09-20 10:25:36.331,231.169.195.137,css
2015-09-20 10:25:34.064,137.205.146.206,jpg
2015-09-20 10:25:32.312,53.0.188.251,jpg
2015-09-20 10:25:27.254,111.214.104.239,jpg
2015-09-20 10:25:22.561,111.46.85.146,jpg
2015-09-20 10:25:06.674,55.100.60.111,jpg
2015-09-20 10:25:05.114,34.197.178.155,jpg
2015-09-20 10:24:55.114,163.123.136.118,jpg
2015-09-20 10:24:54.818,11.195.163.57,jpg
2015-09-20 10:24:53.742,96.222.137.213,png
2015-09-20 10:24:48.798,227.228.214.218,jpg
2015-09-20 10:24:20.223,228.53.110.116,jpg
2015-09-20 10:24:01.794,196.131.253.111,png
2015-09-20 10:23:49.521,125.163.133.47,jpg
2015-09-20 10:23:45.816,148.47.216.255,jpg
2015-09-20 10:23:36.052,51.105.100.214,jpg
2015-09-20 10:23:34.323,41.210.252.157,gif
2015-09-20 10:23:27.213,248.163.75.193,png
2015-09-20 10:23:14.866,48.43.210.167,png
2015-09-20 10:23:10.578,33.95.78.209,css
2015-09-20 10:23:07.001,96.40.73.208,css
2015-09-20 10:23:02.876,174.32.230.63,jpg
2015-09-20 10:23:00.019,140.233.207.177,jpg
2015-09-20 10:22:47.447,37.127.124.65,jpg
2015-09-20 10:22:45.803,130.171.208.139,png
2015-09-20 10:22:45.590,39.250.210.253,jpg
2015-09-20 10:22:43.997,248.239.221.43,css
2015-09-20 10:22:36.107,232.64.207.109,gif
2015-09-20 10:22:30.527,24.186.122.118,jpg
2015-09-20 10:22:25.697,23.3.174.206,jpg
2015-09-20 10:22:08.272,185.170.80.142,php
2015-09-20 10:21:40.822,202.22.74.232,png
2015-09-20 10:21:36.210,39.227.27.167,jpg
2015-09-20 10:21:19.154,140.233.207.177,jpg
2015-09-20 10:21:09.852,22.151.97.227,jpg
2015-09-20 10:21:06.079,157.39.25.197,css
2015-09-20 10:21:01.357,37.127.124.65,jpg
2015-09-20 10:20:56.519,23.184.94.58,jpg
2015-09-20 10:20:40.189,80.83.92.252,jpg
2015-09-20 10:20:27.012,66.194.157.171,png
2015-09-20 10:20:24.450,15.191.218.38,jpg
2015-09-20 10:19:45.764,199.113.69.162,jpg
2015-09-20 10:19:43.754,171.243.18.67,gif
2015-09-20 10:19:41.208,126.87.234.213,jpg
2015-09-20 10:19:40.307,78.216.173.242,css
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with saved filters and job post params csv file matches 1`] = `
"@timestamp,clientip,extension
2015-09-20 10:25:55.744,116.126.47.226,css
2015-09-20 10:25:54.701,169.228.188.120,jpg
2015-09-20 10:25:52.360,74.224.77.232,css
2015-09-20 10:25:49.913,97.83.96.39,css
2015-09-20 10:25:44.979,175.188.44.145,css
2015-09-20 10:25:40.968,89.143.125.181,jpg
2015-09-20 10:25:36.331,231.169.195.137,css
2015-09-20 10:25:34.064,137.205.146.206,jpg
2015-09-20 10:25:32.312,53.0.188.251,jpg
2015-09-20 10:25:27.254,111.214.104.239,jpg
2015-09-20 10:25:22.561,111.46.85.146,jpg
2015-09-20 10:25:06.674,55.100.60.111,jpg
2015-09-20 10:25:05.114,34.197.178.155,jpg
2015-09-20 10:24:55.114,163.123.136.118,jpg
2015-09-20 10:24:54.818,11.195.163.57,jpg
2015-09-20 10:24:53.742,96.222.137.213,png
2015-09-20 10:24:48.798,227.228.214.218,jpg
2015-09-20 10:24:20.223,228.53.110.116,jpg
2015-09-20 10:24:01.794,196.131.253.111,png
2015-09-20 10:23:49.521,125.163.133.47,jpg
2015-09-20 10:23:45.816,148.47.216.255,jpg
2015-09-20 10:23:36.052,51.105.100.214,jpg
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view export with saved filters, job params timerange filter, and query from unsaved state csv file matches 1`] = `
"@timestamp,clientip,extension
2015-09-20 10:25:55.744,116.126.47.226,css
2015-09-20 10:25:52.360,74.224.77.232,css
2015-09-20 10:25:49.913,97.83.96.39,css
2015-09-20 10:25:44.979,175.188.44.145,css
2015-09-20 10:25:36.331,231.169.195.137,css
"
`;
